# jellyfishlights-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml
jellyfishlightspy/: helpers.py  model.py  requests.py
